css camera fix on mobile screen

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -1098,7 +1098,7 @@ input[type=password]:hover {
     }
     #snapYou {
       width: 100%;
-      left:25%;
+      left:25% !important;
       position: fixed;
       top: 80px;
     }
